--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocerymart</title>
+    <title>Sign up - Grocerymart</title>
     <!-- Favicon link -->
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
@@ -16,24 +16,18 @@
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <!-- Scripts -->
     <script src="./js/scripts.js"></script>
-    <!-- CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
     <style>
     </style>
 </head>
 <body>
-    <div class="container-fluid ">
-        <!-- Header -->
-        <header id="header"></header>
-        <script>load("#header", "./template/header.html")</script>
-    </div>
-    <div class="container">
-        <!-- Main -->
-        <!-- <p>Main</p> -->
-        <!-- Footer -->
-        <!-- <footer id="footer"></footer> -->
-        <!-- <script>load("#footer", "./template/footer.html")</script> -->
-    </div>
+    <!-- Header -->
+    <header id="header"></header>
+    <script>load("#header", "./template/header.html")</script>
+    <!-- Main -->
+    <p>Sign up</p>    
+    <!-- Footer -->
+    <footer id="footer"></footer>
+    <script>load("#footer", "./template/footer.html")</script>
 
 </body>
 </html>
