--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grocerymart</title>
     <!-- Favicon link -->
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- Fonts -->
-    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     <!-- Scripts -->
-    <script src="./js/scripts.js"></script>
+    <script src="./assets/js/scripts.js"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <style>
-    </style>
-</head>
-<body>
-    <div class="container-fluid ">
-        <!-- Header -->
-        <header id="header"></header>
-        <script>load("#header", "./template/header.html")</script>
-    </div>
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    </head>
+    
+    <body>
+    <!-- Header -->
+    <header id="header" class="header"></header>
+    <script>
+      load("#header", "./templates/header.html");
+    </script>
     <div class="container">
-        <!-- Main -->
-        <!-- <p>Main</p> -->
-        <!-- Footer -->
-        <!-- <footer id="footer"></footer> -->
-        <!-- <script>load("#footer", "./template/footer.html")</script> -->
+      <!-- Main -->
+      <!-- <p>Main</p> -->
+      <!-- Footer -->
+      <!-- <footer id="footer"></footer> -->
+      <!-- <script>load("#footer", "./template/footer.html")</script> -->
     </div>
-
-</body>
+  </body>
 </html>
