--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="dark">
 
 <head>
     <meta charset="UTF-8" />
@@ -28,8 +28,23 @@
       load("#header", "./templates/header.html");
     </script>
     <div class="container">
-      <!-- Main -->
-      <!-- <p>Main</p> -->
+      <div class="slideshow">
+        <div class="slideshow__inner">
+          <div class="slideshow__item">
+            <a href="#!" class="slideshow__link">
+              <picture>
+                <source media="(max-width: 767.98px)" srcset="./assets/images/slideshow/item1-md.png">
+                <img src="./assets/images/slideshow/item1.png" alt="" class="slideshow__img">
+              </picture>
+            </a>
+          </div>
+        </div>
+        <div class="slideshow__page">
+          <span class="slideshow__num">1</span>
+          <span class="slideshow__slider"></span>
+          <span class="slideshow__num">5</span>
+        </div>
+      </div>
       <!-- Footer -->
       <!-- <footer id="footer"></footer> -->
       <!-- <script>load("#footer", "./template/footer.html")</script> -->
