--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="">
 
 <head>
     <meta charset="UTF-8" />
@@ -27,24 +27,72 @@
     <script>
       load("#header", "./templates/header.html");
     </script>
-    <div class="container">
-      <div class="slideshow">
-        <div class="slideshow__inner">
-          <div class="slideshow__item">
-            <a href="#!" class="slideshow__link">
-              <picture>
-                <source media="(max-width: 767.98px)" srcset="./assets/images/slideshow/item1-md.png">
-                <img src="./assets/images/slideshow/item1.png" alt="" class="slideshow__img">
-              </picture>
-            </a>
-          </div>
+    <!--Slide show  -->
+    <div class="container home">
+        <section class="home__container">
+            <div class="slideshow">
+                <div class="slideshow__inner">
+                    <div class="slideshow__item">
+                        <a href="#!" class="slideshow__link">
+                            <picture>
+                                <source media="(max-width: 767.98px)" srcset="./assets/images/slideshow/item1-md.png">
+                                <img src="./assets/images/slideshow/item1.png" alt="" class="slideshow__img">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="slideshow__page">
+                    <span class="slideshow__num">1</span>
+                    <span class="slideshow__slider"></span>
+                    <span class="slideshow__num">5</span>
+                </div>
+            </div>
+    </section>
+    <!-- Category -->
+    <section class="home__container">
+        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__cate row row-cols-3 row-cols-md-1">
+            <div class="col">
+                <article class="cate-item">
+                    <div class="cate-item__thumb-wrapper"><img src="./assets/images/home-cate/item1.png" alt=""
+                            class="cate-item__thumb"></div>
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__heading">
+                            $24 - $150
+                        </h3>
+                        <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                    </section>
+                </article>
+            </div>
+            <div class="col">
+                <article class="cate-item">
+                    <div class="cate-item__thumb-wrapper"><img src="./assets/images/home-cate/item2.png" alt=""
+                            class="cate-item__thumb"></div>
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__heading">
+                            $24 - $150
+                        </h3>
+                        <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                    </section>
+                </article>
+            </div>
+            <div class="col">
+                <article class="cate-item">
+                    <div class="cate-item__thumb-wrapper">
+                        <img src="./assets/images/home-cate/item3.png" alt="" class="cate-item__thumb">
+                    </div>
+    
+                    <section class="cate-item__info">
+                        <h3 class="cate-item__heading">
+                            $24 - $150
+                        </h3>
+                        <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                    </section>
+                </article>
+            </div>
         </div>
-        <div class="slideshow__page">
-          <span class="slideshow__num">1</span>
-          <span class="slideshow__slider"></span>
-          <span class="slideshow__num">5</span>
-        </div>
-      </div>
+    </section>
+
       <!-- Footer -->
       <!-- <footer id="footer"></footer> -->
       <!-- <script>load("#footer", "./template/footer.html")</script> -->
